Fix linter errors and warnings